@@ -1,2 +1,40 @@
 # Mini-Project
 It's a mini project of Simple Media Player in Java
+# Building a Media Player using java
+
+# Libraries required
+    - javafx  v17
+    -jdk v17
+    - jfeonix
+
+# Required applications for development
+    - Intellij
+    - Scene Builder
+    
+
+# How to Run?
+    - Install required application
+    -Add javafx libraries in build path of project
+    -Add dependencies as jfeonix
+    -In Vertual Machine section of run configuration
+
+    --module-path
+"C:\javafx-sdk-17.0.1\lib"
+--add-modules=javafx.base,javafx.controls,javafx.fxml,javafx.graphics,javafx.media,javafx.swing,javafx.web
+--add-opens
+javafx.base/com.sun.javafx.runtime=ALL-UNNAMED
+--add-opens
+javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED
+--add-opens
+javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED
+--add-opens
+javafx.base/com.sun.javafx.binding=ALL-UNNAMED
+--add-opens
+javafx.base/com.sun.javafx.event=ALL-UNNAMED
+--add-opens
+javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED
+ 
+
+
+# Contributors
+    - Thanmai Deeepthi     - Mohit Rathour     - Inder Sonu     - Sandhya Boddu
